# frxml

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  run.sh
docs/: README.md
frxml/: CMakeLists.txt  frxml.h
frxml-test/: CMakeLists.txt
frxml-test/graph/: main.py
frxml-test/lib/: main.cxx
frxml-test/samples/: 0.xml  2.xml  3.xml  321gone.xml  NOTICE  SigmodRecord.xml  SigmodRecord_pv.xml  customer.xml  lineitem.xml  mondial-3.0_pv.xml  nation.xml  orders.xml  part.xml  part_pv.xml  partsupp.xml  reed_pv.xml  region.xml  supplier.xml
frxml/include/frxml/: frxml.h  node.h  parse.inc  string.h
frxml/internal/: chariterator.h  domparser.h
frxml/src/: chariterator.cxx  doc.cxx  dom.cxx  frxml.cxx  safestringview.cxx
test/: CMakeLists.txt  randomxml.h
test/script/: main.py
test/src/: main.cxx  randomxml.cxx
test/test/: 1, 10.xml  1, 3.xml  10, 10.xml  10, 3.xml  50, 10.xml  50, 3.xml
